# contract-kit

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BLOAT_AUDIT_FINDINGS.md  BLOAT_REDUCTION_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SKILLS.md  deny.toml
.agents/skills/add-new-cli-command/: SKILL.md
.agents/skills/add-new-cli-command/agents/: openai.yaml
.agents/skills/add-new-cli-command/evals/: evals.json
.agents/skills/add-new-cli-command/references/: command-addition-playbook.md  examples-good-and-bad-command-diffs.md  official-guides-and-crates.md
.agents/skills/refresh-workspace-agentic-documentation/: SKILL.md
.agents/skills/refresh-workspace-rustdocs/: SKILL.md
.agents/skills/refresh-workspace-rustdocs/agents/: openai.yaml
.agents/skills/rust-code-structuring-best-practices/: SKILL.md
.agents/skills/use-rust-best-practices-abstractions/: SKILL.md
.agents/skills/use-rust-best-practices-architecture/: SKILL.md
.agents/skills/use-rust-best-practices-architecture/assets/templates/workspace-root/: Cargo.toml
.agents/skills/use-rust-best-practices-async/: SKILL.md
.agents/skills/use-rust-best-practices-core/: SKILL.md
.agents/skills/use-rust-best-practices-core/assets/templates/baseline-package/: Cargo.toml
.agents/skills/use-rust-best-practices-dependencies-platforms/: SKILL.md
.agents/skills/use-rust-best-practices-networking/: SKILL.md
.agents/skills/use-rust-best-practices-testing/: SKILL.md
.agents/skills/use-rust-shell-cli-best-practices/: SKILL.md
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  hardening.yml  release.yml
conkit/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  app.rs  archive.rs  args.rs  bounded_output.rs  catalog.rs  command.rs  compiler.rs  context.rs  contracts.rs  error.rs  main.rs  output.rs  platform.rs  report.rs
conkit-signature/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  api.rs  error.rs  files.rs  inventory.rs  lib.rs  limits.rs  work.rs
conkit-signature/benches/: source_parsing.rs
conkit-signature/languages/: mod.rs
conkit-signature/languages/rust/: mod.rs  rustdoc.rs  source.rs
conkit-signature/languages/rust/parser/: backend.rs  inventory_builder.rs  inventory_collector.rs  item_converter.rs  mod.rs  signature_id.rs  source_graph.rs  symbol_table.rs  type_converter.rs  visibility_converter.rs
conkit-signature/languages/rust/parser/backend/: compiler.rs  syntax.rs
conkit-signature/languages/rust/parser/yaml/: document.rs  input.rs  mod.rs  render.rs  sketch.rs  type_text.rs
conkit-signature/languages/rust/parser/yaml/input/: contract.rs  declaration.rs  member.rs  metadata.rs
conkit-signature/languages/rust/parser/yaml/render/: lossless.rs  output.rs  proposal.rs
conkit-signature/languages/rust/parser/yaml/tests/: document.rs  generate.rs  mod.rs  sketch.rs
conkit-signature/languages/rust/rustdoc/: artifact.rs  declarations.rs  index.rs  modules.rs  provenance.rs  types.rs
conkit-signature/languages/rust/rustdoc/tests/: artifact.rs  declarations.rs  mod.rs  modules.rs  provenance.rs  types.rs
conkit-signature/languages/rust/types/: associated_item.rs  attributes.rs  base_type.rs  callable_type.rs  declaration.rs  enum_type.rs  function_type.rs  impl_type.rs  macro_type.rs  mod.rs  primitive_types.rs  static_type.rs  struct_type.rs  syntax_text.rs  trait_type.rs  type_alias_type.rs  union_type.rs
conkit-signature/tests/: public_api.rs
conkit-signature/tests/public_api/: async_contract.rs  boundaries.rs  support.rs  workflows.rs
conkit-sketch/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  api.rs  contract.rs  error.rs  files.rs  generate.rs  id.rs  inventory.rs  lib.rs  limits.rs  matcher.rs  normalize.rs  report.rs  work.rs
conkit-sketch/benches/: matcher.rs
conkit-sketch/contract/: diff.rs  document.rs  edit.rs  model.rs  resolve.rs  tests.rs
conkit-sketch/contract/edit/: scalar.rs
conkit-sketch/limits/: catalog.rs  matching.rs  output.rs  yaml.rs
conkit-sketch/tests/: public_api.rs
conkit-sketch/tests/public_api/: async_contract.rs  boundaries.rs  support.rs  workflows.rs
conkit/archive/: publication.rs  source.rs
conkit/catalog/: ownership.rs  path.rs  reconciliation.rs  source.rs  store.rs
conkit/command/: archive.rs  check.rs  diff.rs  generate.rs
conkit/compiler/: error.rs  extractor.rs  limits.rs  probe.rs  process.rs  project.rs  source.rs
conkit/contracts/: document.rs  extraction.rs  layout.rs  sketch.rs
conkit/contracts/document/: header.rs  yaml.rs
conkit/platform/: windows_names.rs
conkit/tests/: archive_diff.rs  check.rs  cli_help.rs  dependency_policy.rs  domain_conformance.rs  generate.rs  platform_paths.rs  scenario_harness.rs  scenarios.rs
conkit/tests/fixtures/archive-v1/: .gitattributes
conkit/tests/scenario_harness/: execution.rs  filesystem.rs  manifest.rs  suite.rs
conkit/tests/support/: mod.rs  scenario.rs
conkit/tests/support/scenario/: error.rs  manifest.rs  sandbox.rs  steps.rs  suite.rs  tree.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: rust_syntax.rs  signature_yaml.rs  signature_yaml_edit.rs  sketch_matching.rs  sketch_normalization.rs  sketch_yaml.rs  source_graph.rs  yaml_edit.rs
fuzz/seeds/rust_syntax/: malformed.rs  valid.rs
fuzz/seeds/signature_yaml/: deep_boundary.yaml  malformed_duplicate_key.yaml  valid_v2.yaml
fuzz/seeds/signature_yaml_edit/: attribute_message.seed
fuzz/seeds/sketch_matching/: exactly_one_duplicate.seed  overlap.seed
fuzz/seeds/sketch_normalization/: whitespace_sensitive.seed
fuzz/seeds/sketch_yaml/: deep_boundary.yaml  malformed_missing_version.yaml  valid_v2.yaml
fuzz/seeds/source_graph/: bounded_graph.seed
fuzz/seeds/yaml_edit/: scalar_styles.seed
fuzz/src/: lib.rs  signature.rs  sketch.rs
test/fixtures/compiler-api/: Cargo.toml
test/scenarios/: AGENTS.md  README.md
test/scenarios/archive-rust/: .gitattributes
test/scenarios/check-rust/: .gitattributes
test/scenarios/generate-rust/: .gitattributes
(+363 files in other folders)
