[workspace]
members = ["conkit", "conkit-signature", "conkit-sketch"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/genaptic/contract-kit"
homepage = "https://github.com/genaptic/contract-kit"
readme = "README.md"

[workspace.dependencies]
async-lock = { version = "3", default-features = false, features = ["std"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
