[workspace]
members = ["conkit", "conkit-signature", "conkit-sketch"]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
repository = "https://github.com/genaptic/contract-kit"
homepage = "https://github.com/genaptic/contract-kit"
readme = "README.md"

[workspace.dependencies]
async-lock = { version = "3", default-features = false, features = ["std"] }
cap-fs-ext = { version = "4.0.2", default-features = false, features = ["std"] }
cap-std = { version = "4.0.2", default-features = false }
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }
ctrlc = { version = "3.5.2", default-features = false, features = ["termination"] }
futures-channel = "0.3"
futures-executor = "0.3"
proptest = { version = "1.11.0", default-features = false, features = ["std"] }
rayon = "1"
rustdoc-types = { version = "0.60.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde-saphyr = { version = "0.0.29", default-features = false, features = ["deserialize", "serialize"] }
serde_json = "1"
sha2 = { version = "0.11", default-features = false }
syn = { version = "3", features = ["full", "parsing", "visit"] }
thiserror = "2"
yaml-edit = { version = "0.2.3", default-features = false }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
