[package]
name = "conkit-signature"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
futures-channel = "0.3"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
syn = { version = "2", features = ["full", "parsing", "visit"] }
thiserror = "2"

[dev-dependencies]
futures-executor = "0.3"
