[package]
name = "conkit-signature"
version.workspace = true
edition.workspace = true
description = "Runtime-neutral signature contracts for Contract Kit"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/conkit-signature"
readme.workspace = true
keywords = ["contracts", "rust", "validation"]
categories = ["development-tools"]

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
async-lock.workspace = true
futures-channel = "0.3"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
syn = { version = "2", features = ["full", "parsing", "visit"] }
thiserror = "2"

[dev-dependencies]
futures-executor = "0.3"

[package.metadata.docs.rs]
all-features = true
