[package]
name = "conkit-signature"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Runtime-neutral signature contracts for Contract Kit"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/conkit-signature"
readme.workspace = true
keywords = ["contracts", "rust", "validation"]
categories = ["development-tools"]

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
async-lock.workspace = true
futures-channel.workspace = true
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
rayon.workspace = true
rustdoc-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
sha2.workspace = true
syn = { version = "2", features = ["full", "parsing", "visit"] }
thiserror.workspace = true
yaml-edit.workspace = true

[dev-dependencies]
criterion.workspace = true
futures-executor.workspace = true
proptest.workspace = true

[[bench]]
name = "source_parsing"
harness = false

[package.metadata.docs.rs]
all-features = true
