[package]
name = "conkit-sketch"
version.workspace = true
edition.workspace = true
description = "Runtime-neutral sketch contracts for Contract Kit"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/conkit-sketch"
readme.workspace = true
keywords = ["contracts", "snippets", "validation"]
categories = ["development-tools"]

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
async-lock.workspace = true
futures-channel = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
futures-executor = "0.3"

[package.metadata.docs.rs]
all-features = true
