[package]
name = "conkit-sketch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Runtime-neutral sketch contracts for Contract Kit"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/conkit-sketch"
readme.workspace = true
keywords = ["contracts", "snippets", "validation"]
categories = ["development-tools"]

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
async-lock.workspace = true
futures-channel.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
sha2.workspace = true
thiserror.workspace = true
yaml-edit.workspace = true

[dev-dependencies]
criterion.workspace = true
futures-executor.workspace = true
proptest.workspace = true

[[bench]]
name = "matcher"
harness = false

[package.metadata.docs.rs]
all-features = true
