[package]
name = "conkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Contract Kit command-line interface"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "conkit"
path = "main.rs"

[dependencies]
anyhow = "1"
atomic-write-file = "0.3"
cap-fs-ext.workspace = true
cap-std.workspace = true
cargo_metadata = "0.23.1"
clap = { version = "4", features = ["derive", "wrap_help"] }
command-group = "5.0.1"
ctrlc.workspace = true
flate2 = "1"
fs-err = "3"
futures-executor.workspace = true
rayon.workspace = true
same-file = "1"
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
sha2.workspace = true
conkit-signature = { version = "0.1.0", path = "../conkit-signature" }
conkit-sketch = { version = "0.1.0", path = "../conkit-sketch" }
tempfile = "3"
thiserror.workspace = true
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
syn.workspace = true
toml_edit = "0.25.12"
